AKS/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 3000
  externalTrafficPolicy: Local
  type: LoadBalancer
