AKS/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  rules:
    - host: uit.social
      http:
        paths:
          - path: /api(/|$)(.*)
            backend:
              serviceName: myapp
              servicePort: 9000
